Bug 131663 - CRASH: Crash while inserting large PNG image (SKIA)
Summary: CRASH: Crash while inserting large PNG image (SKIA)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Images Skia
  Show dependency treegraph
 
Reported: 2020-03-29 13:35 UTC by Telesto
Modified: 2020-05-11 07:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-03-29 13:35:10 UTC
Description:
CRASH: Crash while inserting large PNG image

Steps to Reproduce:
1. Download attachment 149363 [details] (bug 123541)
2. Open Writer
3. Insert -> Image & Select the PNG

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 7ae9c9572ccac55c0926b8a9779bb63c4236291c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Dieter 2020-03-30 12:22:44 UTC
I confirm it with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL

but not with

Version: 6.3.5.2 (x64)
Build-ID: dd0751754f11728f69b42ee2af66670068624673
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 2 Xisco Faulí 2020-03-31 09:34:02 UTC
I can't reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 11e6582b23b983fde4b04ece5b37c546bcd98a43
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

it seems win only
Comment 3 Xisco Faulí 2020-03-31 11:36:46 UTC
Skia related, started to happen after https://cgit.freedesktop.org/libreoffice/core/commit/?id=2b4f2cdd3deb9b131ea19c91ae50e2c34f35754c

Adding Cc: to Luboš Luňák
Comment 4 Commit Notification 2020-04-01 08:04:56 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/957092a29ff0626ead52ae776f004c08e93116b0

use large watchdog timeouts with Skia raster (tdf#131663)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-04-15 12:20:11 UTC
Verified in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 94a7ceae287a7967e8f013d012673e26637c6bb5
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded

@Luboš Luňák, thanks for fixing this issue!
Comment 6 BogdanB 2020-05-11 07:13:46 UTC
No crash on 
Version: 7.0.0.0.alpha1
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded