use large watchdog timeouts with Skia raster (tdf#131663)

This in practice disables the watchdog, as it doesn't make sense anyway
with CPU-based rendering.

Change-Id: If884fa64b3155244ffcf8eddeff75223f7915ed7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91424
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>